Document now compiles with new data

--- a/docs/CarbonInvestments.tex
+++ b/docs/CarbonInvestments.tex
@@ -10,8 +10,6 @@
 \author{K. Abramowicz, E. Wenk, D. Falster}
 \date{\today}
 
-\graphicspath{../output/docs}
-
 \setlength{\textwidth}{151mm}\topmargin 7mm \textheight 210mm
 \headheight 0mm \headsep 10mm \footskip 15mm \textwidth 151mm
 \oddsidemargin 6.3mm \evensidemargin 6.3mm \marginparwidth 20mm
@@ -29,9 +27,9 @@ The goal of the code is to:
 \end{itemize}
 \section{Structure of Software}
 \begin{center}
-\includegraphics[width=0.75\linewidth]{Flow1.png}\\
-\includegraphics[width=0.75\linewidth]{Flow2.png}\\
-\includegraphics[width=0.75\linewidth]{Flow3.png}
+\includegraphics[width=0.75\linewidth]{images/Flow1.png}\\
+\includegraphics[width=0.75\linewidth]{images/Flow2.png}\\
+\includegraphics[width=0.75\linewidth]{images/Flow3.png}
 \end{center}
 
 \section{Listing of files}
@@ -279,7 +277,7 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 
 \begin{figure}[htb]
 \begin{center}
-\includegraphics[width=6in]{PlantGraph.pdf}
+\includegraphics[width=6in]{images/PlantGraph.pdf}
 \end{center}
 \caption{Graphical presentation of the \texttt{igraph} tree structure of plant map for COER.}
 \end{figure}
@@ -295,10 +293,10 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 \newpage
 \section{BAER}
 \begin{multicols}{2}
-\includegraphics[width=3in]{BAER.png}
+\includegraphics[width=3in]{images/BAER.png}
 \vfill
 \columnbreak
-\input{../output/docs/BAER.tex}
+\input{tables/BAER.tex}
 \end{multicols}
 
 
@@ -307,10 +305,10 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 \newpage
 \section{BOLE}
 \begin{multicols}{2}
-\includegraphics[width=3in]{BOLE.png}
+\includegraphics[width=3in]{images/BOLE.png}
 \vfill
 \columnbreak
-\input{../output/docs/BOLE.tex}
+\input{tables/BOLE.tex}
 \end{multicols}
 
 
@@ -321,10 +319,10 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 
 \section{COER}
 \begin{multicols}{2}
-\includegraphics[width=2.7in]{COER.png}
+\includegraphics[width=2.7in]{images/COER.png}
 \vfill
 \columnbreak
-\input{../output/docs/COER.tex}
+\input{tables/COER.tex}
 \end{multicols}
 
 \clearpage
@@ -333,10 +331,10 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 
 \section{EPMI}
 \begin{multicols}{2}
-\includegraphics[width=2.5in]{EPMI.png}
+\includegraphics[width=2.5in]{images/EPMI.png}
 \vfill
 \columnbreak
-\input{../output/docs/EPMI.tex}
+\input{tables/EPMI.tex}
 \end{multicols}
 
 \clearpage
@@ -345,11 +343,11 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 
 \section{GRBU}
 \begin{multicols}{2}
-\includegraphics[width=3in]{GRBU.png}
+\includegraphics[width=3in]{images/GRBU.png}
 \vfill
 \columnbreak
 
-\input{../output/docs/GRBU.tex}\\
+\input{tables/GRBU.tex}\\
 
 \end{multicols}
 
@@ -358,11 +356,11 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 
 \section{GRSP}
 \begin{multicols}{2}
-\includegraphics[width=3in]{GRSP.png}
+\includegraphics[width=3in]{images/GRSP.png}
 \vfill
 \columnbreak
 
-\input{../output/docs/GRSP.tex}
+\input{tables/GRSP.tex}
 
 \end{multicols}
 
@@ -373,10 +371,10 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 \newpage
 \section{HATE}
 \begin{multicols}{2}
-\includegraphics[width=3in]{HATE.png}
+\includegraphics[width=3in]{images/HATE.png}
 \vfill
 \columnbreak
-\input{../output/docs/HATE.tex}
+\input{tables/HATE.tex}
 
 \end{multicols}
 
@@ -387,10 +385,10 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 
 \section{HEPU}
 \begin{multicols}{2}
-\includegraphics[width=3in]{HEPU.png}
+\includegraphics[width=3in]{images/HEPU.png}
 \vfill
 \columnbreak
-\input{../output/docs/HEPU.tex}
+\input{tables/HEPU.tex}
 \end{multicols}
 
 \clearpage
@@ -398,11 +396,11 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 
 \section{LEES}
 \begin{multicols}{2}
-\includegraphics[width=3in]{LEES.png}
+\includegraphics[width=3in]{images/LEES.png}
 \vfill
 \columnbreak
 %%%%
-\input{../output/docs/LEES.tex}
+\input{tables/LEES.tex}
 %%%%%
 \\
 \end{multicols}
@@ -412,10 +410,10 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 
 \section{PELA}
 \begin{multicols}{2}
-\includegraphics[width=2.8in]{PELA.png}
+\includegraphics[width=2.8in]{images/PELA.png}
 \vfill
 \columnbreak
-\input{../output/docs/PELA.tex}
+\input{tables/PELA.tex}
 \end{multicols}
 
 
@@ -424,10 +422,10 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 \newpage
 \section{PEPU}
 \begin{multicols}{2}
-\includegraphics[width=2.7in]{PEPU.png}
+\includegraphics[width=2.7in]{images/PEPU.png}
 \vfill
 \columnbreak
-\input{../output/docs/PEPU.tex}
+\input{tables/PEPU.tex}
 \end{multicols}
 \clearpage
 \newpage
@@ -437,10 +435,10 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 \newpage
 \section{PHPH}
 \begin{multicols}{2}
-\includegraphics[width=3in]{PHPH.png}
+\includegraphics[width=3in]{images/PHPH.png}
 \vfill
 \columnbreak
-\input{../output/docs/PHPH.tex}
+\input{tables/PHPH.tex}
 \end{multicols}
 
 
@@ -449,10 +447,10 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 \newpage
 \section{PILI}
 \begin{multicols}{2}
-\includegraphics[width=2.7in]{PILI.png}
+\includegraphics[width=2.7in]{images/PILI.png}
 \vfill
 \columnbreak
-\input{../output/docs/PILI.tex}
+\input{tables/PILI.tex}
 \end{multicols}
 
 
@@ -463,10 +461,10 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 \newpage
 \section{PUTU}
 \begin{multicols}{2}
-\includegraphics[width=2.5in]{PUTU.png}
+\includegraphics[width=2.5in]{images/PUTU.png}
 \vfill
 \columnbreak
-\input{../output/docs/PUTU.tex}
+\input{tables/PUTU.tex}
 \end{multicols}
 
 
@@ -479,54 +477,57 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 
 \begin{figure}[h!]
 \begin{center}
-\input{../output/docs/AvCountsPerMM.tex}
+\input{tables/AvCountsPerMM.tex}
 \end{center}
 \caption{Table summarising the average number of elements per mm. To be used for calculations of mass based on the length for conversion to counts.}
 \end{figure}
 
 
-\section{Regression Fits and Coefficients}
-\subsection*{GRBU}
-\begin{center}
-\includegraphics[width=2.7in]{../output/docs/GRBU_fruit_large_immature.pdf}
-\includegraphics[width=2.7in]{../output/docs/GRBU_seed_pod.pdf}
-\end{center}
+% TODO: Include these plots
+% \section{Regression Fits and Coefficients}
+% \subsection*{GRBU}
+% \begin{center}
+% \includegraphics[width=2.7in]{figures/GRBU_fruit_large_immature.pdf}
+% \includegraphics[width=2.7in]{figures/GRBU_seed_pod.pdf}
+% \end{center}
 
-\subsection{GRSP}
-\begin{center}
-\includegraphics[width=2.7in]{../output/docs/GRSP_fruit_large_immature.pdf}
-\includegraphics[width=2.7in]{../output/docs/GRSP_seed_pod.pdf}
-\end{center}
+% \subsection{GRSP}
+% \begin{center}
+% \includegraphics[width=2.7in]{figures/GRSP_fruit_large_immature.pdf}
+% \includegraphics[width=2.7in]{figures/GRSP_seed_pod.pdf}
+% \end{center}
 
-\subsection{PELA}
-\begin{center}
-\includegraphics[width=2.7in]{../output/docs/PELA_fruit_large_immature.pdf}
-\includegraphics[width=2.7in]{../output/docs/PELA_seed_pod.pdf}\\
-\includegraphics[width=2.7in]{../output/docs/PELA_seed.pdf}
-\end{center}
+% \subsection{PELA}
+% \begin{center}
+% \includegraphics[width=2.7in]{figures/PELA_fruit_large_immature.pdf}
+% \includegraphics[width=2.7in]{figures/PELA_seed_pod.pdf}\\
+% \includegraphics[width=2.7in]{figures/PELA_seed.pdf}
+% \end{center}
 
-\subsection{BAER}
-\begin{center}
-\includegraphics[width=2.7in]{../output/docs/BAER_cone_young.pdf}
-\includegraphics[width=2.7in]{../output/docs/BAER_cone_green.pdf}\\
-\includegraphics[width=2.7in]{../output/docs/BAER_cone_brown_no_expanded_follicles.pdf}
-\includegraphics[width=2.7in]{../output/docs/BAER_cone_brown.pdf}\\
-\includegraphics[width=2.7in]{../output/docs/BAER_cone_aborted.pdf}
-\includegraphics[width=2.7in]{../output/docs/BAER_cone_base_green.pdf}\\
-\includegraphics[width=2.7in]{../output/docs/BAER_cone_base_brown.pdf}
-\end{center}
+% \subsection{BAER}
+% \begin{center}
+% \includegraphics[width=2.7in]{figures/BAER_cone_young.pdf}
+% \includegraphics[width=2.7in]{figures/BAER_cone_green.pdf}\\
+% \includegraphics[width=2.7in]{figures/BAER_cone_brown_no_expanded_follicles.pdf}
+% \includegraphics[width=2.7in]{figures/BAER_cone_brown.pdf}\\
+% \includegraphics[width=2.7in]{figures/BAER_cone_aborted.pdf}
+% \includegraphics[width=2.7in]{figures/BAER_cone_base_green.pdf}\\
+% \includegraphics[width=2.7in]{figures/BAER_cone_base_brown.pdf}
+% \end{center}
 
-\subsection{PEPU}
-\begin{center}
-\includegraphics[width=2.7in]{../output/docs/PEPU_cone_green.pdf}
-\includegraphics[width=2.7in]{../output/docs/PEPU_cone_brown.pdf}\\
-\includegraphics[width=2.7in]{../output/docs/PEPU_cone_aborted.pdf}
-\end{center}
+% \subsection{PEPU}
+% \begin{center}
+% \includegraphics[width=2.7in]{figures/PEPU_cone_green.pdf}
+% \includegraphics[width=2.7in]{figures/PEPU_cone_brown.pdf}\\
+% \includegraphics[width=2.7in]{figures/PEPU_cone_aborted.pdf}
+% \end{center}
+
+
 \newpage
 \subsection{Summary table for regression}
 \begin{figure}[h!]
 \begin{center}
-\input{../output/docs/RegressionTable.tex}
+\input{tables/RegressionTable.tex}
 \end{center}
 \caption{Table summarising the equations used to determine weights of individual plant parts by using their size.}
 \end{figure}
@@ -534,142 +535,145 @@ An example of the graph for CEOR species is presented in Figure 1.1.
 \chapter{Preliminary results}
 \section{Reproductive allocation results}
 \subsection{Overview}
-\includegraphics[width=1\linewidth]{../output/docs/RA_comparison.pdf}
-\includegraphics[width=1\linewidth]{../output/docs/RA_Diam_comparison.pdf}
-\includegraphics[width=1\linewidth]{../output/docs/RA_Weight_comparison.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_comparison_age.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_comparison_diam.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_comparison_weight.pdf}
 \clearpage
+
+TODO:Add this material back in
+
 \newpage
 \section{Individual species}
 \subsection{BAER}
-\includegraphics[width=1\linewidth]{../output/docs/RA_BAER.pdf}
-{\center\includegraphics[width=0.66\linewidth]{../output/docs/RA_BAER_DW.pdf}}
+\includegraphics[width=1\linewidth]{figures/RA_age_BAER.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_weight_diam_BAER.pdf}
 
 \clearpage
 \newpage
 \subsection{BOLE}
-\includegraphics[width=1\linewidth]{../output/docs/RA_BOLE.pdf}
-{\center\includegraphics[width=0.66\linewidth]{../output/docs/RA_BOLE_DW.pdf}}
+\includegraphics[width=1\linewidth]{figures/RA_age_BOLE.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_weight_diam_BOLE.pdf}
 
 \clearpage
 \newpage
 \subsection{COER}
-\includegraphics[width=1\linewidth]{../output/docs/RA_COER.pdf}
-{\center\includegraphics[width=0.66\linewidth]{../output/docs/RA_COER_DW.pdf}}
+\includegraphics[width=1\linewidth]{figures/RA_age_COER.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_weight_diam_COER.pdf}
 
 \clearpage
 \newpage
 \subsection{EPMI}
-\includegraphics[width=1\linewidth]{../output/docs/RA_EPMI.pdf}
-{\center\includegraphics[width=0.66\linewidth]{../output/docs/RA_EPMI_DW.pdf}}
+\includegraphics[width=1\linewidth]{figures/RA_age_EPMI.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_weight_diam_EPMI.pdf}
 
 \clearpage
 \newpage
 \subsection{GRBU}
-\includegraphics[width=1\linewidth]{../output/docs/RA_GRBU.pdf}
-{\center\includegraphics[width=0.66\linewidth]{../output/docs/RA_GRBU_DW.pdf}}
+\includegraphics[width=1\linewidth]{figures/RA_age_GRBU.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_weight_diam_GRBU.pdf}
 
 \clearpage
 \newpage
 \subsection{GRSP}
-\includegraphics[width=1\linewidth]{../output/docs/RA_GRSP.pdf}
-{\center\includegraphics[width=0.66\linewidth]{../output/docs/RA_GRSP_DW.pdf}}
+\includegraphics[width=1\linewidth]{figures/RA_age_GRSP.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_weight_diam_GRSP.pdf}
 
 \clearpage
 \newpage
 \subsection{HATE}
-\includegraphics[width=1\linewidth]{../output/docs/RA_HATE.pdf}
-{\center\includegraphics[width=0.66\linewidth]{../output/docs/RA_HATE_DW.pdf}}
+\includegraphics[width=1\linewidth]{figures/RA_age_HATE.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_weight_diam_HATE.pdf}
 
 \clearpage
 \newpage
 \subsection{HEPU}
-\includegraphics[width=1\linewidth]{../output/docs/RA_HEPU.pdf}
-{\center\includegraphics[width=0.66\linewidth]{../output/docs/RA_HEPU_DW.pdf}}
+\includegraphics[width=1\linewidth]{figures/RA_age_HEPU.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_weight_diam_HEPU.pdf}
 
 \clearpage
 \newpage
 \subsection{LEES}
-\includegraphics[width=1\linewidth]{../output/docs/RA_LEES.pdf}
-{\center\includegraphics[width=0.66\linewidth]{../output/docs/RA_LEES_DW.pdf}}
+\includegraphics[width=1\linewidth]{figures/RA_age_LEES.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_weight_diam_LEES.pdf}
 
 \clearpage
 \newpage
 \subsection{PELA}
-\includegraphics[width=1\linewidth]{../output/docs/RA_PELA.pdf}
-{\center\includegraphics[width=0.66\linewidth]{../output/docs/RA_PELA_DW.pdf}}
+\includegraphics[width=1\linewidth]{figures/RA_age_PELA.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_weight_diam_PELA.pdf}
 
 \clearpage
 \newpage
 \subsection{PEPU}
-\includegraphics[width=1\linewidth]{../output/docs/RA_PEPU.pdf}
-{\center\includegraphics[width=0.66\linewidth]{../output/docs/RA_PEPU_DW.pdf}}
+\includegraphics[width=1\linewidth]{figures/RA_age_PEPU.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_weight_diam_PEPU.pdf}
 
 \clearpage
 \newpage
 \subsection{PHPH}
-\includegraphics[width=1\linewidth]{../output/docs/RA_PHPH.pdf}
-{\center\includegraphics[width=0.66\linewidth]{../output/docs/RA_PHPH_DW.pdf}}
+\includegraphics[width=1\linewidth]{figures/RA_age_PHPH.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_weight_diam_PHPH.pdf}
 
 \clearpage
 \newpage
 \subsection{PILI}
-\includegraphics[width=1\linewidth]{../output/docs/RA_PILI.pdf}
-{\center\includegraphics[width=0.66\linewidth]{../output/docs/RA_PILI_DW.pdf}}
+\includegraphics[width=1\linewidth]{figures/RA_age_PILI.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_weight_diam_PILI.pdf}
 
 \clearpage
 \newpage
 \subsection{PUTU}
-\includegraphics[width=1\linewidth]{../output/docs/RA_PUTU.pdf}
-{\center\includegraphics[width=0.66\linewidth]{../output/docs/RA_PUTU_DW.pdf}}
+\includegraphics[width=1\linewidth]{figures/RA_age_PUTU.pdf}
+\includegraphics[width=1\linewidth]{figures/RA_weight_diam_PUTU.pdf}
 
-\newpage
-\section{Investment in Accessory Tissues}
-\subsection{Overview}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_Comparison.pdf}
-\clearpage
-\newpage
-\section{Individual species}
-\subsection{BAER}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_BAER.pdf}
+% \newpage
+% \section{Investment in Accessory Tissues}
+% \subsection{Overview}
+% \includegraphics[width=1\linewidth]{figures/IAT_Comparison.pdf}
+% \clearpage
+% \newpage
+% \section{Individual species}
+% \subsection{BAER}
+% \includegraphics[width=1\linewidth]{figures/IAT_BAER.pdf}
 
-\subsection{BOLE}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_BOLE.pdf}
+% \subsection{BOLE}
+% \includegraphics[width=1\linewidth]{figures/IAT_BOLE.pdf}
 
-\subsection{COER}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_COER.pdf}
+% \subsection{COER}
+% \includegraphics[width=1\linewidth]{figures/IAT_COER.pdf}
 
-\subsection{EPMI}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_EPMI.pdf}
+% \subsection{EPMI}
+% \includegraphics[width=1\linewidth]{figures/IAT_EPMI.pdf}
 
-\subsection{GRBU}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_GRBU.pdf}
+% \subsection{GRBU}
+% \includegraphics[width=1\linewidth]{figures/IAT_GRBU.pdf}
 
-\subsection{GRSP}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_GRSP.pdf}
+% \subsection{GRSP}
+% \includegraphics[width=1\linewidth]{figures/IAT_GRSP.pdf}
 
-\subsection{HATE}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_HATE.pdf}
+% \subsection{HATE}
+% \includegraphics[width=1\linewidth]{figures/IAT_HATE.pdf}
 
-\subsection{HEPU}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_HEPU.pdf}
+% \subsection{HEPU}
+% \includegraphics[width=1\linewidth]{figures/IAT_HEPU.pdf}
 
-\subsection{LEES}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_LEES.pdf}
+% \subsection{LEES}
+% \includegraphics[width=1\linewidth]{figures/IAT_LEES.pdf}
 
-\subsection{PELA}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_PELA.pdf}
+% \subsection{PELA}
+% \includegraphics[width=1\linewidth]{figures/IAT_PELA.pdf}
 
-\subsection{PEPU}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_PEPU.pdf}
+% \subsection{PEPU}
+% \includegraphics[width=1\linewidth]{figures/IAT_PEPU.pdf}
 
-\subsection{PHPH}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_PHPH.pdf}
+% \subsection{PHPH}
+% \includegraphics[width=1\linewidth]{figures/IAT_PHPH.pdf}
 
-\subsection{PILI}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_PILI.pdf}
+% \subsection{PILI}
+% \includegraphics[width=1\linewidth]{figures/IAT_PILI.pdf}
 
-\subsection{PUTU}
-\includegraphics[width=1\linewidth]{../output/docs/IAT_PUTU.pdf}
+% \subsection{PUTU}
+% \includegraphics[width=1\linewidth]{figures/IAT_PUTU.pdf}
 
 
 
