More descritpive names

--- a/docs/CarbonInvestments.tex
+++ b/docs/CarbonInvestments.tex
@@ -66,8 +66,8 @@ The goal of the code is to:
 \end{itemize}
 \item{Plotting functions}
 \begin{itemize}
-\item \texttt{Plot\_RAs} Function that plots and saves in a pdf RA for all the species on one plot.
-\item \texttt{PlotIndividual\_RA} Function that for each species creates a 3 panel plot with reproductive investment, growth investment and RA.
+\item \texttt{Plot\_ReproductionAllocations} Function that plots and saves in a pdf RA for all the species on one plot.
+\item \texttt{PlotIndividual\_ReproductionAllocation} Function that for each species creates a 3 panel plot with reproductive investment, growth investment and RA.
 \end{itemize}
 \item Libraries used
 \begin{itemize}
@@ -256,7 +256,7 @@ Input parameters:
 \end{itemize}
 The function does not return anything, however it saves 3 files(\texttt{****} stands for species name):
 \begin{itemize}
-\item \texttt{****\_Inv} Information about investment in creation/progression of specific parts along all censuses for all the individuals.
+\item \texttt{****\_Investment} Information about investment in creation/progression of specific parts along all censuses for all the individuals.
 \item \texttt{****\_Lost} Information about lost parts for all individuals.
 \item \texttt{****\_Error} Information about possible errors (missing predecessors to preexisting element).
 \end{itemize}
